@@ -41,6 +41,7 @@
 22. Re-enable animation when showing messagewidget, for Qt-only builds and
     for non 4.9.4 KDE builds.
 23. Slightly speed up playqueue searches.
+24. Prompt before removing playlists.
 
 0.9.2
 -----
